Started data processing pipeline creation

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -26,41 +26,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'danceability': 0.495,\n",
-       "  'energy': 0.894,\n",
-       "  'key': 2,\n",
-       "  'loudness': -4.814,\n",
+       "[{'danceability': 0.422,\n",
+       "  'energy': 0.609,\n",
+       "  'key': 11,\n",
+       "  'loudness': -6.361,\n",
        "  'mode': 0,\n",
-       "  'speechiness': 0.0441,\n",
-       "  'acousticness': 0.00453,\n",
-       "  'instrumentalness': 0.000596,\n",
-       "  'liveness': 0.103,\n",
-       "  'valence': 0.213,\n",
-       "  'tempo': 126.03,\n",
+       "  'speechiness': 0.0335,\n",
+       "  'acousticness': 0.0114,\n",
+       "  'instrumentalness': 4.76e-06,\n",
+       "  'liveness': 0.108,\n",
+       "  'valence': 0.0911,\n",
+       "  'tempo': 107.34,\n",
        "  'type': 'audio_features',\n",
-       "  'id': '5TbzAWWc5eJaANpA9kfGCd',\n",
-       "  'uri': 'spotify:track:5TbzAWWc5eJaANpA9kfGCd',\n",
-       "  'track_href': 'https://api.spotify.com/v1/tracks/5TbzAWWc5eJaANpA9kfGCd',\n",
-       "  'analysis_url': 'https://api.spotify.com/v1/audio-analysis/5TbzAWWc5eJaANpA9kfGCd',\n",
-       "  'duration_ms': 239894,\n",
-       "  'time_signature': 4}]"
+       "  'id': '2jQiSYrwJehQAcuaaQrXnS',\n",
+       "  'uri': 'spotify:track:2jQiSYrwJehQAcuaaQrXnS',\n",
+       "  'track_href': 'https://api.spotify.com/v1/tracks/2jQiSYrwJehQAcuaaQrXnS',\n",
+       "  'analysis_url': 'https://api.spotify.com/v1/audio-analysis/2jQiSYrwJehQAcuaaQrXnS',\n",
+       "  'duration_ms': 230011,\n",
+       "  'time_signature': 3}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "urn = 'https://open.spotify.com/track/5TbzAWWc5eJaANpA9kfGCd?si=9262cbe9e69c486e'\n",
+    "urn = 'spotify:track:2jQiSYrwJehQAcuaaQrXnS'\n",
     "\n",
-    "sp.audio_features(urn)\n"
+    "sp.audio_features(urn)"
    ]
   }
  ],
