Partial completion of tracks dataset. On to EDA

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,9 @@
     "import time\n",
     "import sys\n",
     "from dotenv import load_dotenv\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
@@ -26,41 +29,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('../data/spotify_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>uri</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rend Collective</td>\n",
+       "      <td>Rescuer (Good News)</td>\n",
+       "      <td>0.491</td>\n",
+       "      <td>0.7460</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-4.872</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0565</td>\n",
+       "      <td>0.39600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.3680</td>\n",
+       "      <td>0.6270</td>\n",
+       "      <td>152.022</td>\n",
+       "      <td>spotify:track:32f24TdkpHx8L0EZX2HbP4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Yuna</td>\n",
+       "      <td>Lullabies - Adventure Club Remix</td>\n",
+       "      <td>0.403</td>\n",
+       "      <td>0.6980</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-5.058</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0357</td>\n",
+       "      <td>0.00171</td>\n",
+       "      <td>0.001260</td>\n",
+       "      <td>0.2560</td>\n",
+       "      <td>0.0833</td>\n",
+       "      <td>159.869</td>\n",
+       "      <td>spotify:track:3RJuptH9QoeJWzHd4ZCI0u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tech N9ne</td>\n",
+       "      <td>Shut the F**k Up (Skit)</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.9500</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-8.761</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.51000</td>\n",
+       "      <td>0.071200</td>\n",
+       "      <td>0.8720</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>spotify:track:4oiXR2h98f196Ov2wCjCJS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bayside</td>\n",
+       "      <td>Landing Feet First</td>\n",
+       "      <td>0.436</td>\n",
+       "      <td>0.3320</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-7.649</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0406</td>\n",
+       "      <td>0.00434</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1090</td>\n",
+       "      <td>0.3290</td>\n",
+       "      <td>174.901</td>\n",
+       "      <td>spotify:track:3y0ycPzjAE6R66u3aw8MBk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Iamsu!</td>\n",
+       "      <td>Back On My BS (feat. Skipper &amp; Problem)</td>\n",
+       "      <td>0.755</td>\n",
+       "      <td>0.8090</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-5.954</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1660</td>\n",
+       "      <td>0.17400</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1810</td>\n",
+       "      <td>0.5490</td>\n",
+       "      <td>98.035</td>\n",
+       "      <td>spotify:track:3AtNkheraHcfe0ubFQ9Xp1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8468</th>\n",
+       "      <td>Huey Lewis &amp; The News</td>\n",
+       "      <td>If This Is It</td>\n",
+       "      <td>0.512</td>\n",
+       "      <td>0.4930</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-12.964</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0276</td>\n",
+       "      <td>0.15500</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.1280</td>\n",
+       "      <td>0.8360</td>\n",
+       "      <td>146.668</td>\n",
+       "      <td>spotify:track:6xBedrkburGrmhQGvlBfoH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8469</th>\n",
+       "      <td>Murry Jonathan Gold</td>\n",
+       "      <td>Doctor Who 'I Am The Doctor' For Orchestra</td>\n",
+       "      <td>0.589</td>\n",
+       "      <td>0.7920</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-5.145</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0337</td>\n",
+       "      <td>0.06240</td>\n",
+       "      <td>0.881000</td>\n",
+       "      <td>0.0602</td>\n",
+       "      <td>0.3890</td>\n",
+       "      <td>90.981</td>\n",
+       "      <td>spotify:track:2aDZw6PUiIBcIYZ9d47jwa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8470</th>\n",
+       "      <td>Musica de Piano Escuela</td>\n",
+       "      <td>Kiss the Rain</td>\n",
+       "      <td>0.573</td>\n",
+       "      <td>0.0707</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-22.578</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0469</td>\n",
+       "      <td>0.98000</td>\n",
+       "      <td>0.939000</td>\n",
+       "      <td>0.1110</td>\n",
+       "      <td>0.2030</td>\n",
+       "      <td>131.016</td>\n",
+       "      <td>spotify:track:7JpMDy3skWcOYdGDvE9ng9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8471</th>\n",
+       "      <td>Piano Tribute Players</td>\n",
+       "      <td>She Will Be Loved</td>\n",
+       "      <td>0.485</td>\n",
+       "      <td>0.2990</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-18.445</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0658</td>\n",
+       "      <td>0.99200</td>\n",
+       "      <td>0.924000</td>\n",
+       "      <td>0.1120</td>\n",
+       "      <td>0.1260</td>\n",
+       "      <td>204.036</td>\n",
+       "      <td>spotify:track:0aabUVAPbLV6sLtnM1lb8B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8472</th>\n",
+       "      <td>Coldplay</td>\n",
+       "      <td>Green Eyes</td>\n",
+       "      <td>0.607</td>\n",
+       "      <td>0.4050</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-8.607</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0265</td>\n",
+       "      <td>0.53900</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.2310</td>\n",
+       "      <td>0.2330</td>\n",
+       "      <td>129.543</td>\n",
+       "      <td>spotify:track:3ou9rSNUQnE7XYmJkUUIOc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8473 rows × 14 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[{'danceability': 0.422,\n",
-       "  'energy': 0.609,\n",
-       "  'key': 11,\n",
-       "  'loudness': -6.361,\n",
-       "  'mode': 0,\n",
-       "  'speechiness': 0.0335,\n",
-       "  'acousticness': 0.0114,\n",
-       "  'instrumentalness': 4.76e-06,\n",
-       "  'liveness': 0.108,\n",
-       "  'valence': 0.0911,\n",
-       "  'tempo': 107.34,\n",
-       "  'type': 'audio_features',\n",
-       "  'id': '2jQiSYrwJehQAcuaaQrXnS',\n",
-       "  'uri': 'spotify:track:2jQiSYrwJehQAcuaaQrXnS',\n",
-       "  'track_href': 'https://api.spotify.com/v1/tracks/2jQiSYrwJehQAcuaaQrXnS',\n",
-       "  'analysis_url': 'https://api.spotify.com/v1/audio-analysis/2jQiSYrwJehQAcuaaQrXnS',\n",
-       "  'duration_ms': 230011,\n",
-       "  'time_signature': 3}]"
+       "                  artist_name                                  track_name  \\\n",
+       "0             Rend Collective                         Rescuer (Good News)   \n",
+       "1                        Yuna            Lullabies - Adventure Club Remix   \n",
+       "2                   Tech N9ne                     Shut the F**k Up (Skit)   \n",
+       "3                     Bayside                          Landing Feet First   \n",
+       "4                      Iamsu!     Back On My BS (feat. Skipper & Problem)   \n",
+       "...                       ...                                         ...   \n",
+       "8468    Huey Lewis & The News                               If This Is It   \n",
+       "8469      Murry Jonathan Gold  Doctor Who 'I Am The Doctor' For Orchestra   \n",
+       "8470  Musica de Piano Escuela                               Kiss the Rain   \n",
+       "8471    Piano Tribute Players                           She Will Be Loved   \n",
+       "8472                 Coldplay                                  Green Eyes   \n",
+       "\n",
+       "      danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
+       "0            0.491  0.7460    7    -4.872     1       0.0565       0.39600   \n",
+       "1            0.403  0.6980    9    -5.058     0       0.0357       0.00171   \n",
+       "2            0.000  0.9500    9    -8.761     1       0.0000       0.51000   \n",
+       "3            0.436  0.3320    9    -7.649     1       0.0406       0.00434   \n",
+       "4            0.755  0.8090    7    -5.954     0       0.1660       0.17400   \n",
+       "...            ...     ...  ...       ...   ...          ...           ...   \n",
+       "8468         0.512  0.4930    7   -12.964     1       0.0276       0.15500   \n",
+       "8469         0.589  0.7920    2    -5.145     0       0.0337       0.06240   \n",
+       "8470         0.573  0.0707    8   -22.578     1       0.0469       0.98000   \n",
+       "8471         0.485  0.2990    0   -18.445     0       0.0658       0.99200   \n",
+       "8472         0.607  0.4050    9    -8.607     1       0.0265       0.53900   \n",
+       "\n",
+       "      instrumentalness  liveness  valence    tempo  \\\n",
+       "0             0.000000    0.3680   0.6270  152.022   \n",
+       "1             0.001260    0.2560   0.0833  159.869   \n",
+       "2             0.071200    0.8720   0.0000    0.000   \n",
+       "3             0.000000    0.1090   0.3290  174.901   \n",
+       "4             0.000000    0.1810   0.5490   98.035   \n",
+       "...                ...       ...      ...      ...   \n",
+       "8468          0.000005    0.1280   0.8360  146.668   \n",
+       "8469          0.881000    0.0602   0.3890   90.981   \n",
+       "8470          0.939000    0.1110   0.2030  131.016   \n",
+       "8471          0.924000    0.1120   0.1260  204.036   \n",
+       "8472          0.000007    0.2310   0.2330  129.543   \n",
+       "\n",
+       "                                       uri  \n",
+       "0     spotify:track:32f24TdkpHx8L0EZX2HbP4  \n",
+       "1     spotify:track:3RJuptH9QoeJWzHd4ZCI0u  \n",
+       "2     spotify:track:4oiXR2h98f196Ov2wCjCJS  \n",
+       "3     spotify:track:3y0ycPzjAE6R66u3aw8MBk  \n",
+       "4     spotify:track:3AtNkheraHcfe0ubFQ9Xp1  \n",
+       "...                                    ...  \n",
+       "8468  spotify:track:6xBedrkburGrmhQGvlBfoH  \n",
+       "8469  spotify:track:2aDZw6PUiIBcIYZ9d47jwa  \n",
+       "8470  spotify:track:7JpMDy3skWcOYdGDvE9ng9  \n",
+       "8471  spotify:track:0aabUVAPbLV6sLtnM1lb8B  \n",
+       "8472  spotify:track:3ou9rSNUQnE7XYmJkUUIOc  \n",
+       "\n",
+       "[8473 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "urn = 'spotify:track:2jQiSYrwJehQAcuaaQrXnS'\n",
-    "\n",
-    "sp.audio_features(urn)"
+    "df"
    ]
   }
  ],
