Fixed issue with repeated answer.

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -1198,14 +1198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
-    "track_data = []\n",
+    "\n",
     "def transform_query(track_uri):\n",
     "    audio_features = sp.audio_features(track_uri)[0]\n",
-    "    \n",
+    "    track_data = []\n",
     "    track_dict = {\n",
     "        'acousticness': audio_features['acousticness'],\n",
     "        'danceability': audio_features['danceability'],\n",
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,30 +1259,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artist: Epik High, Song: Born Hater, Track URI: spotify:track:5U7tpgpGPatDwrpUn5MuZg\n",
-      "Artist: A$AP Rocky, Song: Goldie, Track URI: spotify:track:31G9RaSaDOI2NWcpnIp734\n",
-      "Artist: Beastie Boys, Song: Hold It Now, Hit It, Track URI: spotify:track:3C8xkK4Cir2QmiaN07GIZs\n",
-      "Artist: Disclosure, Song: Holding On, Track URI: spotify:track:7nZBNthuHTNQJZ76CUp9nD\n",
-      "Artist: Wax, Song: Stupefied, Track URI: spotify:track:1RvXKtObv8cnsCLweT0trE\n",
-      "Artist: C-Kan, Song: Cantantes, Track URI: spotify:track:224Bc7DxpTo1vFy3hOL6jt\n",
-      "Artist: The Him, Song: Everybody Hurts, Track URI: spotify:track:0XZ7s9UpQNmSOvRj0AaZH7\n",
-      "Artist: Ginuwine, Song: Hell Yeah, Track URI: spotify:track:1p149YJfXkHkSzYp4UZUxV\n",
-      "Artist: Aesop Rock, Song: Night Light, Track URI: spotify:track:2PNQeJgqa3H2CpRcn5ypru\n",
-      "Artist: Wu-Tang Clan, Song: Wu-Tang Clan Ain't Nuthing ta F' Wit (feat. RZA, Inspectah Deck & Method Man), Track URI: spotify:track:24vNw0Z0srb4zYXwrakw8E\n"
+      "Artist: Yusuf / Cat Stevens, Song: Father And Son, Track URI: spotify:track:2tbdjsdJ9xtyunKnZBkGxF\n",
+      "Artist: Train, Song: Blind, Track URI: spotify:track:4EADnBeeLZoFyOJoGeoOw5\n",
+      "Artist: Bob Dylan, Song: Jokerman, Track URI: spotify:track:6cuHkcRUqtQhtJ4sWCkd1q\n",
+      "Artist: Temple Of The Dog, Song: Times Of Trouble, Track URI: spotify:track:4m1BHxinyAOrymQFKqTsr6\n",
+      "Artist: Bronski Beat, Song: Smalltown Boy, Track URI: spotify:track:0FrCX7P2C2hcRTcuhjEvK4\n",
+      "Artist: Aer, Song: Feel I Bring, Track URI: spotify:track:2p7QqN1aMNg6aVMTR78a2x\n",
+      "Artist: Ty Dolla $ign, Song: Know Ya (feat. Trey Songz), Track URI: spotify:track:2KB0DJBN3GPoXe9ZJPKE3u\n",
+      "Artist: Bob Dylan, Song: Mr. Tambourine Man - Live at Boston Music Hall, Boston, MA - November 21, 1975 - Afternoon, Track URI: spotify:track:0703Xd7Z3EHAddRthFYi6v\n",
+      "Artist: Drake, Song: Diamonds Dancing, Track URI: spotify:track:2AGottAzfC8bHzF7kEJ3Wa\n",
+      "Artist: Incubus, Song: Echo, Track URI: spotify:track:1sqkxy2WNAgpRtQfDP64MN\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# Replace 'YOUR_TRACK_URI' with the track URI you want to find similar songs to\n",
-    "similar_songs = find_similar_songs('spotify:track:2aDZw6PUiIBcIYZ9d47jwa')\n",
+    "similar_songs = find_similar_songs('https://open.spotify.com/track/2Fxmhks0bxGSBdJ92vM42m?si=d8d6ffa9f4874c07')\n",
     "\n",
     "# Print the results\n",
     "for song in similar_songs:\n",
