Created Gradio interface

--- a/notebooks/spotifyown.ipynb
+++ b/notebooks/spotifyown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,29 +34,29 @@
      "output_type": "stream",
      "text": [
       "Recommendation 1:\n",
-      "Track: Taghatam Deh\n",
-      "Artist: Farid Farjad\n",
-      "Spotify URL: https://open.spotify.com/track/2ApKDh9e6tpcOGhJg4mHSh\n",
+      "Track: Album of the Year - Freestyle\n",
+      "Artist: J. Cole\n",
+      "Spotify URL: https://open.spotify.com/track/6rDaCGqcQB1urhpCrrD599\n",
       "\n",
       "Recommendation 2:\n",
-      "Track: Hatif\n",
-      "Artist: Ross Daly\n",
-      "Spotify URL: https://open.spotify.com/track/1VOQlVr94FMqJ1oYxub45v\n",
+      "Track: Obie Story\n",
+      "Artist: Obie Trice\n",
+      "Spotify URL: https://open.spotify.com/track/7oa7aSPeeUWZFANx3UiOTz\n",
       "\n",
       "Recommendation 3:\n",
-      "Track: Our Story\n",
-      "Artist: Evanthia Reboutsika\n",
-      "Spotify URL: https://open.spotify.com/track/6u3Gy9vECGzdnSWUMv4fZd\n",
+      "Track: Hungry Before the Bite\n",
+      "Artist: LGP QUA\n",
+      "Spotify URL: https://open.spotify.com/track/62aDJOFxmETTNzTjdonbRm\n",
       "\n",
       "Recommendation 4:\n",
-      "Track: Vivaldi İstanbul'da\n",
-      "Artist: Can Atilla\n",
-      "Spotify URL: https://open.spotify.com/track/2TyMfGOLVcOS7RNDxGn1iy\n",
+      "Track: Doomsday (with Juice WRLD & Cordae)\n",
+      "Artist: Lyrical Lemonade, Juice WRLD, Cordae\n",
+      "Spotify URL: https://open.spotify.com/track/3bkpVSoNvBkvt9LJMFT5at\n",
       "\n",
       "Recommendation 5:\n",
-      "Track: Schindler's List Main Theme\n",
-      "Artist: 2CELLOS\n",
-      "Spotify URL: https://open.spotify.com/track/3K3t9bWMFeYAd75PzwUubd\n",
+      "Track: Pearl Harbor (REMIX) [feat. Mathematics, Method Man, Ghostface Killah, Sean Price, Pharoahe Monch and Tek]\n",
+      "Artist: Wu-Tang Clan, Method Man, Sean Price, Ghostface Killah, Pharoahe Monch, Mathematics, TEK\n",
+      "Spotify URL: https://open.spotify.com/track/32YnV5RmAyObk6EFPwTe2G\n",
       "\n"
      ]
     }
@@ -109,7 +109,7 @@
     "        print()\n",
     "\n",
     "# Example usage\n",
-    "track_url = 'https://open.spotify.com/track/2ApKDh9e6tpcOGhJg4mHSh?si=fd5848d1e9384c9d'\n",
+    "track_url = 'https://open.spotify.com/track/6rDaCGqcQB1urhpCrrD599?si=2ac7add2ea054ab2'\n",
     "track_id = track_url.split('/')[-1].split('?')[0]  # Extract track ID from the URL\n",
     "get_similar_songs(track_id)"
    ]
